fixed Search result gap

--- a/assets/themes/Snail/css/main.css
+++ b/assets/themes/Snail/css/main.css
@@ -1370,9 +1370,9 @@ a.action-icon.action-solution {
 }
 
 .entries{
-	padding-top: 20px;
-	margin-left:10px;
-    margin-top:25px;
+	padding-top:15px;
+	margin-left:25px;
+    margin-top:10px;
     margin-bottom:25px;
 }
 
